Matheus Battisti - Hora de Codar - CRIE UMA CALCULADORA COM HTML CSS E JAVASCRIPT

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,4 +10,14 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    padding: 3em;
+}
+
+#calc {
+    width: 400px;
+    padding: 0.5em;
+    background-color: #c4c4c4;
+    color: #000;
+    display: flex;
+    flex-direction: column;
 }
