--- a/CSS/style.css
+++ b/CSS/style.css
@@ -21,3 +21,9 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+#calc h3 {
+    font-size: 0.8em;
+    font-weight: 300;
+    color: #666;
+}
