Matheus Battisti - Hora de Codar - CRIE UMA CALCULADORA COM HTML CSS E JAVASCRIPT

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -32,17 +32,18 @@ body {
     text-align: right;
 }
 
-#previous-operation {
-    color: #777;
+#previous-operation,
+#current-operation {
+    min-height: 1.6em;
     padding: 0.2em;
     overflow-wrap: break-word;
-    min-height: 1.6em;
+}
+
+#previous-operation {
+    color: #777;    
 }
 
 #current-operation {
-    min-height: 1.6em;
     font-size: 3em;
     font-weight: 700;
-    padding: 00.2em;
-    overflow-wrap: break-word;
 }
