--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,3 +47,8 @@ body {
     font-size: 3em;
     font-weight: 700;
 }
+
+#buttons-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+}
