Matheus Battisti - Hora de Codar - CRIE UMA CALCULADORA COM HTML CSS E JAVASCRIPT

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,4 +51,9 @@ body {
 #buttons-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 3px;
+}
+
+#buttons-container button {
+    
 }
