--- a/CSS/style.css
+++ b/CSS/style.css
@@ -55,5 +55,10 @@ body {
 }
 
 #buttons-container button {
-    
+    border: 1px solid transparent;
+    border-radius: 0;
+    height: 4em;
+    font-size: 1.2em;
+    background-color: #dbdbdb;
+    cursor: pointer;
 }
