--- a/CSS/style.css
+++ b/CSS/style.css
@@ -62,3 +62,11 @@ body {
     background-color: #dbdbdb;
     cursor: pointer;
 }
+
+#buttons-container .number{
+    background-color: #f3f3f3;
+}
+
+#buttons-container button:hover {
+    
+}
